--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/cart.css">
 </head>
 <body>
     <!-- Nav -->
@@ -182,8 +182,8 @@
 </body>
 </html>
 <script type="module">
-    import {paymentBtn, shipping} from "./components/cartPayment.js";
-    import {showProduct, paymentForm, myForm} from "./scripts/cart.js";
+    import {paymentBtn, shipping} from "../components/cartPayment.js";
+    import {showProduct, paymentForm, myForm} from "../scripts/cart.js";
     let screenWidth = screen.width;
     let tempWidth;
     setInterval(() =>{
@@ -233,7 +233,7 @@
         }
     }
 </script>
-<script src="./scripts/creataccount.js"></script>
-<script src="./scripts/productReview.js"></script>
-<script src="./scripts/summerClothes.js"></script>
-<script src="./scripts/index.js"></script>
+<script src="../scripts/creataccount.js"></script>
+<script src="../scripts/productReview.js"></script>
+<script src="../scripts/summerClothes.js"></script>
+<script src="../scripts/index.js"></script>
