--- a/pages/productReview.html
+++ b/pages/productReview.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothes</title>
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/productReview.css">
+    <link rel="stylesheet" href="/./styles/index.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/productReview.css">
 </head>
 <body>
     <!-- Nav -->
@@ -212,8 +212,8 @@
 </body>
 </html>
 <script type="module">
-    import {runCode} from "./scripts/productReview.js";
-    import {option, rightContainerJs} from "./components/options.js";
+    import {runCode} from "../scripts/productReview.js";
+    import {option, rightContainerJs} from "../components/options.js";
     let screenWidth = window.innerWidth;
     if(screenWidth >= 961){
         document.getElementById("cartButton").textContent = null;
@@ -282,8 +282,8 @@
         document.getElementById("currentPrice").textContent = "Add to Cart " + "₹ " + currentPro[0].price[0] + "," + currentPro[0].price.substring(1,  currentPro[0].price.length);
     }
 </script>
-<script type="module" src="./scripts/productReview.js"></script>
-<script src="./scripts/cart.js"></script>
-<script src="./scripts/creataccount.js"></script>
-<script src="./scripts/summerClothes.js"></script>
-<script src="./scripts/index.js"></script>
+<script type="module" src="../scripts/productReview.js"></script>
+<script src="../scripts/cart.js"></script>
+<script src="../scripts/creataccount.js"></script>
+<script src="../scripts/summerClothes.js"></script>
+<script src="../scripts/index.js"></script>
