--- a/pages/signin.html
+++ b/pages/signin.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
     <link rel="shortcut icon" href="https://cdn.desertcart.com/images/logo57.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/signin.css">
+    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/signin.css">
 </head>
 <body>
      <!-- Nav -->
@@ -166,8 +166,8 @@
     </div>
 </body>
 </html>
-<script src="./scripts/signin.js"></script>
-<script src="./scripts/cart.js"></script>
-<script src="./scripts/productReview.js"></script>
-<script src="./scripts/summerClothes.js"></script>
-<script src="./scripts/index.js"></script>
+<script src="../scripts/signin.js"></script>
+<script src="../scripts/cart.js"></script>
+<script src="../scripts/productReview.js"></script>
+<script src="../scripts/summerClothes.js"></script>
+<script src="../scripts/index.js"></script>
