--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
 </body>
 </html>
-<script src="scripts/index.js"></script>
+<script src="./scripts/index.js"></script>
 <script src="./scripts/cart.js"></script>
 <script src="./scripts/creataccount.js"></script>
 <script src="./scripts/productReview.js"></script>
